[metadata]
name = jenkins-job-linter
author = Daniel Watkins
author-email = daniel@daniel-watkins.co.uk
summary = Perform linting checks against a directory of Jenkins job XML
description-file = README.md
home-page = https://github.com/OddBloke/jenkins-job-linter
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
keywords =
    jenkins
    jenkins-job-builder

[files]
packages =
    jenkins_job_linter

[entry_points]
console_scripts =
    jenkins-job-linter = jenkins_job_linter:main
jjb.cli.subcommands =
    lint=jenkins_job_linter.jjb_subcommand:LintSubCommand
jjl.linters =
    ensure_timestamps=jenkins_job_linter.linters:EnsureTimestamps
    check_column_configuration=jenkins_job_linter.linters:CheckColumnConfiguration
    check_env_inject=jenkins_job_linter.linters:CheckEnvInject
    check_for_empty_shell=jenkins_job_linter.linters:CheckForEmptyShell
    check_job_references=jenkins_job_linter.linters:CheckJobReferences
    check_shebang=jenkins_job_linter.linters:CheckShebang

[mypy-jenkins_jobs.*]
ignore_missing_imports = True

[mypy-jenkins_job_linter.jjb_subcommand]
disallow_subclassing_any = False

[mypy-stevedore.extension]
ignore_missing_imports = True
